--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive": "^10.0.0"
