--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "next": "14.2.3",
+    "next-video": "^1.0.6",
+    "next-videos": "^1.4.1",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
